# quickdistill

./: .pycommands  README.md  get_traces.py  inference_server.py  judges.json  pyproject.toml  update.sh  weak_model_meta-llama_Llama-3.1-8B-Instruct.json  weak_model_meta-llama_Llama-3.3-70B-Instruct.json  weak_model_openai_gpt-oss-20b.json
dev/: generate_test_traces.py  get_call.py  judge_manager.html  judges.json  pystatus  run_evaluation.py  run_inf_with_providers.py  run_weak_models.py  trace_viewer.html  v2_run_inf_w_providers.py  weak_model_google_gemini-2.5-flash.json  weak_model_meta-llama_Llama-3.1-8B-Instruct.json
dev/old/: TEST_TRACE_GENERATION.md
dev/projects/byyoung3_test-financial-qa/: traces_data.json
dev/strong_exports/: anthropic_claude-3.5-sonnet_20traces.json  claude-opus-4-1-20250805_1traces.json
quickdistill/: __init__.py  cli.py  default_judges.json  get_traces.py  server.py
quickdistill.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
quickdistill/static/: judge_manager.html  trace_viewer.html
strong_exports/: anthropic_claude-3.5-sonnet_10traces_v2.json  gpt-5-2025-08-07_199traces.json
