[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "quickdistill"
version = "0.1.6"
description = "Fast and easy toolkit for distilling AI models"
readme = "README.md"
authors = [
    {name = "Brett Young", email = "bdytx5@umsystem.edu"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["ai", "ml", "distillation", "evaluation", "weave"]
requires-python = ">=3.8"
dependencies = [
    "flask==2.3.2",
    "flask-cors==4.0.0",
    "openai==2.14.0",
    "weave==0.52.14",
    "llmasajudge==0.1.15",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "flake8>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/byyoung3/quickdistill"
Documentation = "https://github.com/byyoung3/quickdistill#readme"
Repository = "https://github.com/byyoung3/quickdistill"
Issues = "https://github.com/byyoung3/quickdistill/issues"

[project.scripts]
quickdistill = "quickdistill.cli:main"

[tool.setuptools]
packages = ["quickdistill"]

[tool.setuptools.package-data]
quickdistill = ["static/*.html", "default_judges.json", "default_projects/**/*.json"]

[tool.black]
line-length = 120
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 120
